envoy-gateway/eg_resources/envoy-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: default
spec:
  parentRefs:
  - name: envoy-gateway # Reference the Gateway created above.
    # namespace: envoy-gateway-system # Reference the Gateway created above.
  hostnames:
  - httpbin.local.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin # Reference the sample app service.
      port: 8000
      weight: 1 # Match the service port.
  - matches:
    - path:
        type: PathPrefix
        value: /nginx
    backendRefs:
    - name: nginx # Reference the sample app service.
      port: 80
